fix spacing of summary web page

--- a/usage/web-console/web-app/css/console/brooklyn-console.css
+++ b/usage/web-console/web-app/css/console/brooklyn-console.css
@@ -298,7 +298,7 @@ textarea#logbox{
 
 #summary-activity {
     float: right;
-    margin-right: 116px;
+    margin-right: 130px;
 }
 
 #summary ul {
